--- a/web/foldwithme-ui/src/app/revealer/revealer.component.scss
+++ b/web/foldwithme-ui/src/app/revealer/revealer.component.scss
@@ -11,7 +11,7 @@
     background: white;
 }
 
-img {
+.fullCanvas img {
     user-select: none;
     max-width: 100%;
     flex: 1 1 auto;
